--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .content-container{
+        @apply px-4 py-4 w-full;
+    }
+
+    .nav-text{
+        @apply text-xl;
+    }
+}
