--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,18 @@
+
+body {
+    font-family: 'Jura', sans-serif;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer components {
-    .content-container{
+    .content-container {
         @apply px-4 py-4 w-full;
     }
 
-    .nav-text{
-        @apply text-xl;
+    .nav-text {
+        @apply text-xl font-semibold;
     }
 }
