--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 
 body {
     font-family: 'Jura', sans-serif;
+    @apply bg-navy text-slate;
 }
 
 @tailwind base;
@@ -8,11 +9,47 @@ body {
 @tailwind utilities;
 
 @layer components {
+    .xxs {
+        @apply text-[12px];
+    }
+
+    .xs {
+        @apply text-[13px];
+    }
+
+    .sm {
+        @apply text-[14px];
+    }
+
+    .md {
+        @apply text-[16px];
+    }
+
+    .lg {
+        @apply text-[18px];
+    }
+
+    .xl {
+        @apply text-[20px];
+    }
+
+    .xxl {
+        @apply text-[22px];
+    }
+
+    .heading {
+        @apply text-[32px];
+    }
+
     .content-container {
-        @apply px-4 py-4 w-full;
+        @apply px-4 py-4 lg:px-16 w-full;
     }
 
     .nav-text {
         @apply text-xl font-semibold;
+    }
+
+    .cta {
+        @apply px-4 py-1 rounded-[4px] border-[1px] text-green border-green bg-transparent hover:bg-green-tint;
     }
 }
