--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,38 @@ body {
     @apply bg-navy text-slate;
 }
 
+
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+::-webkit-scrollbar {
+    /* display: none;  */
+    width: 25px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #778899;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
