--- a/src/style.css
+++ b/src/style.css
@@ -74,7 +74,7 @@ input[type="number"] {
     }
 
     .content-container {
-        @apply px-4 py-4 lg:px-16 w-full mx-auto max-w-[1920px];
+        @apply px-4 py-8 lg:px-16 lg:py-16 w-full mx-auto max-w-[1920px];
     }
 
     .nav-text {
