--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,7 @@ input[type="number"] {
 
 ::-webkit-scrollbar {
     /* display: none;  */
-    width: 25px;
+    width: 15px;
 }
 
 ::-webkit-scrollbar-track {
@@ -68,7 +68,7 @@ input[type="number"] {
 
 
     .content-container {
-        @apply px-4 py-8 lg:px-16 lg:py-16 w-full mx-auto max-w-[1920px];
+        @apply px-4 py-8 md:px-24 lg:px-44 lg:py-16 w-full mx-auto max-w-[1920px];
     }
 
     .nav-text {
