--- a/src/style.css
+++ b/src/style.css
@@ -69,7 +69,7 @@ input[type="number"] {
 
 
     .content-container {
-        @apply px-4 py-8 md:px-24 lg:px-44 lg:py-16 w-full mx-auto max-w-[1920px];
+        @apply px-4 py-8 md:px-24 lg:px-44 xl:px-52 lg:py-16  w-full mx-auto max-w-[1920px];
     }
 
     .nav-text {
